--- a/certificat.html
+++ b/certificat.html
@@ -227,7 +227,7 @@
                 <div class="certificat-content">
                     <h2 class="certificat-title">THM Pre Security</h2>
                     <p class="certificat-details">Obtenu le : 18/02/2023<br>Organisation : TryHackMe</p>
-                    <p class="certificat-description"></p>
+                    <p class="certificat-description">Les bases techniques essentielles pour débuter en cybersécurité, en explorant le fonctionnement des technologies.</p>
                 </div>
             </div>
             <!-- Certificat 17 -->
@@ -236,7 +236,7 @@
                 <div class="certificat-content">
                     <h2 class="certificat-title">THM Web Fundamentals</h2>
                     <p class="certificat-details">Obtenu le : 27/01/2024<br>Organisation : TryHackMe</p>
-                    <p class="certificat-description"></p>
+                    <p class="certificat-description">L'attaque d'applications Web en couvrant les fondamentaux du Web, les outils de sécurité et l'exploitation des vulnérabilités courantes.</p>
                 </div>
             </div>
             <!-- Certificat 18 -->
@@ -245,7 +245,7 @@
                 <div class="certificat-content">
                     <h2 class="certificat-title">THM Cyber Defense</h2>
                     <p class="certificat-details">Obtenu le : 19/07/2023<br>Organisation : TryHackMe</p>
-                    <p class="certificat-description"></p>
+                    <p class="certificat-description">Introduction complète aux domaines essentiels pour détecter et répondre aux menaces.</p>
                 </div>
             </div>
             <!-- Certificat 19 -->
@@ -254,7 +254,7 @@
                 <div class="certificat-content">
                     <h2 class="certificat-title">THM Introduction to Cyber Security</h2>
                     <p class="certificat-details">Obtenu le : 24/01/2023<br>Organisation : TryHackMe</p>
-                    <p class="certificat-description"></p>
+                    <p class="certificat-description">Introduction pratique aux différents domaines de la cybersécurité pour bien débuter.</p>
                 </div>
             </div>
             <!-- Certificat 20 -->
@@ -263,7 +263,7 @@
                 <div class="certificat-content">
                     <h2 class="certificat-title">THM </h2>
                     <p class="certificat-details">Obtenu le : 21/04/2023<br>Organisation : TryHackMe</p>
-                    <p class="certificat-description"></p>
+                    <p class="certificat-description">Rôle d'analyste sécurité junior, spécialisé dans le triage et la surveillance des journaux d'événements et des alertes.</p>
                 </div>
             </div>
             <!-- Certificat 21 -->
@@ -272,7 +272,7 @@
                 <div class="certificat-content">
                     <h2 class="certificat-title">THM Beginner</h2>
                     <p class="certificat-details">Obtenu le : 07/03/2023<br>Organisation : TryHackMe</p>
-                    <p class="certificat-description"></p>
+                    <p class="certificat-description">Introduction complète aux principaux domaines de la sécurité informatique.</p>
                 </div>
             </div>
             <!-- Certificat 22 -->
@@ -281,7 +281,7 @@
                 <div class="certificat-content">
                     <h2 class="certificat-title">YourAreDigital</h2>
                     <p class="certificat-details">Obtenu le : 17/07/2023<br>Organisation : YourAreDigital</p>
-                    <p class="certificat-description"></p>
+                    <p class="certificat-description">Concepts de sécurité et aux bonnes pratiques pour protéger les comptes à privilèges.</p>
                 </div>
             </div>
             <!-- Certificat 23 -->
@@ -290,7 +290,7 @@
                 <div class="certificat-content">
                     <h2 class="certificat-title">Mooc</h2>
                     <p class="certificat-details">Obtenu le : 10/01/2023<br>Organisation : ANSSI</p>
-                    <p class="certificat-description"></p>
+                    <p class="certificat-description">Sensibiliser les citoyens à la sécurité numérique en milieu professionnel et personnel.</p>
                 </div>
             </div>
         </div>
