--- a/certificat.html
+++ b/certificat.html
@@ -295,5 +295,8 @@
             </div>
         </div>
     </div>
+    <footer>
+        &copy; 2024 Darconex. Tous droits réservés.
+    </footer>
 </body>
 </html>
