--- a/charte.html
+++ b/charte.html
@@ -44,6 +44,9 @@
             text-align: center;
             padding: 20px;
         }
+        .charte {
+            color: green;
+        }
     </style>
 </head>
 <body>
@@ -73,7 +76,7 @@
             </ul>
         </nav>
     </header>
-    <div class="content">
+    <div class="content charte">
         <h2>Charte de Non-Clause</h2>
         <p>&loz; Respecter les lois et réglementations en vigueur en matière de cybersécurité et de protection des données. &loz;</p>
         <p>&loz; Ne pas s’engager dans des activités de piratage informatique, de vol de données, de déni de service ou d’autres actions malveillantes visant à compromettre la sécurité informatique d’autrui. &loz;</p>
