--- a/charte.html
+++ b/charte.html
@@ -43,21 +43,19 @@
             flex-direction: column;
             text-align: center;
             padding: 20px;
+            position: relative;
+            overflow: hidden;
         }
         .charte {
             color: green;
             position: relative;
-            background-image: linear-gradient(45deg, rgba(0, 255, 0, 0.1) 25%, transparent 25%, transparent 75%, rgba(0, 255, 0, 0.1) 75%, rgba(0, 255, 0, 0.1)),
-                              linear-gradient(45deg, rgba(0, 255, 0, 0.1) 25%, transparent 25%, transparent 75%, rgba(0, 255, 0, 0.1) 75%, rgba(0, 255, 0, 0.1));
-            background-size: 40px 40px;
-            background-blend-mode: overlay;
             padding: 20px;
             border-radius: 5px;
         }
         .charte::before {
-            content: "101010101010 00110011 11010101 10101010 11010101 10010101 11101001 11000101 11011001 00101110 10101011 11001001 01010111";
+            content: "101010101010 00110011 11010101 10101010 11010101 10010101 11101001 11000101 11011001 00101110 10101011 11001001 01010111 00101011 11000110 11010101";
             position: absolute;
-            top: 0;
+            top: -100%;
             left: 0;
             right: 0;
             bottom: 0;
@@ -67,7 +65,15 @@
             white-space: nowrap;
             overflow: hidden;
             z-index: -1;
-            display: block;
+            animation: scrollBinary 10s linear infinite;
+        }
+        @keyframes scrollBinary {
+            0% {
+                top: -100%;
+            }
+            100% {
+                top: 100%;
+            }
         }
     </style>
 </head>
