--- a/charte.html
+++ b/charte.html
@@ -53,7 +53,7 @@
             border-radius: 5px;
         }
         .charte::before {
-            content: "101010101010 00110011 11010101 10101010 11010101 10010101 11101001 11000101 11011001 00101110 10101011 11001001 01010111 00101011 11000110 11010101";
+            content: "0A 3F B4 8D 9E 2C FA 7B C1 6D 3E AF 4B 91 6A DF 89 72 5C E0 1F BA 3C D7 A8 54";
             position: absolute;
             top: -100%;
             left: 0;
@@ -65,9 +65,9 @@
             white-space: nowrap;
             overflow: hidden;
             z-index: -1;
-            animation: scrollBinary 10s linear infinite;
+            animation: scrollHex 10s linear infinite;
         }
-        @keyframes scrollBinary {
+        @keyframes scrollHex {
             0% {
                 top: -100%;
             }
