--- a/charte.html
+++ b/charte.html
@@ -43,37 +43,6 @@
             flex-direction: column;
             text-align: center;
             padding: 20px;
-            position: relative;
-            overflow: hidden;
-        }
-        .charte {
-            color: green;
-            position: relative;
-            padding: 20px;
-            border-radius: 5px;
-        }
-        .charte::before {
-            content: "0A 3F B4 8D 9E 2C FA 7B C1 6D 3E AF 4B 91 6A DF 89 72 5C E0 1F BA 3C D7 A8 54";
-            position: absolute;
-            top: -100%;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            color: rgba(0, 255, 0, 0.1);
-            font-size: 2em;
-            line-height: 1.5em;
-            white-space: nowrap;
-            overflow: hidden;
-            z-index: -1;
-            animation: scrollHex 10s linear infinite;
-        }
-        @keyframes scrollHex {
-            0% {
-                top: -100%;
-            }
-            100% {
-                top: 100%;
-            }
         }
     </style>
 </head>
@@ -104,7 +73,7 @@
             </ul>
         </nav>
     </header>
-    <div class="content charte">
+    <div class="content">
         <h2>Charte de Non-Clause</h2>
         <p>Respecter les lois et réglementations en vigueur en matière de cybersécurité et de protection des données.</p>
         <p>Ne pas s’engager dans des activités de piratage informatique, de vol de données, de déni de service ou d’autres actions malveillantes visant à compromettre la sécurité informatique d’autrui.</p>
