--- a/contact.html
+++ b/contact.html
@@ -44,14 +44,17 @@
             padding: 20px;
             background-color: #f9f9f9;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            color: #000;
         }
         .contact-form h2 {
             text-align: center;
             margin-bottom: 20px;
+            color: #000;
         }
         .contact-form label {
             display: block;
             margin-bottom: 5px;
+            color: #000;
         }
         .contact-form input, .contact-form textarea {
             width: 100%;
