--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,20 @@
     <link rel="icon" href="img/logo.png" title="logo">
     <script src="js/script.js"></script>
     <style>
+        .button-link {
+        background-color: #808080;
+        border: none;
+        color: white;
+        padding: 10px 20px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 14px;
+        cursor: pointer;
+        border-radius: 5px;
+        transition-duration: 0.4s;
+        margin-right: 20px;
+      }
         html, body {
             height: 100%;
             margin: 0;
