--- a/contact.html
+++ b/contact.html
@@ -23,35 +23,29 @@
         transition-duration: 0.4s;
         margin-right: 20px;
       }
-        html, body {
-            height: 100%;
-            margin: 0;
-            display: flex;
-            flex-direction: column;
-        }
-        body {
-            flex: 1;
-        }
-        .nav-link-disabled {
-            color: inherit;
-            text-decoration: none;
-            cursor: default;
-        }
-        footer {
-            text-align: center;
-            padding: 10px;
-            background-color: #403f3f;
-            font-size: 0.9em;
-            position: relative;
-            bottom: 0;
-            width: 100%;
-        }
-        .content {
-            flex: 1;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
+      .button-link:hover {
+        background-color: white;
+        color: #808080;
+        border: 2px solid #808080;
+      }
+      #header {
+        display: flex;
+        align-items: center;
+      }
+      #header > div {
+        flex-grow: 1;
+        text-align: center;
+      }
+      footer {
+        text-align: center;
+        padding: 10px;
+        background-color: #403f3f;
+        color: white;
+        font-size: 0.9em;
+        position: relative;
+        bottom: 0;
+        width: 100%;
+      }
         .contact-form {
             width: 100%;
             max-width: 500px;
