--- a/contact.html
+++ b/contact.html
@@ -9,43 +9,50 @@
     <link rel="icon" href="img/logo.png" title="logo">
     <script src="js/script.js"></script>
     <style>
+        body {
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
+            margin: 0;
+            font-family: Arial, sans-serif;
+        }
+        .content {
+            flex: 1;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 20px;
+        }
         .button-link {
-        background-color: #808080;
-        border: none;
-        color: white;
-        padding: 10px 20px;
-        text-align: center;
-        text-decoration: none;
-        display: inline-block;
-        font-size: 14px;
-        cursor: pointer;
-        border-radius: 5px;
-        transition-duration: 0.4s;
-        margin-right: 20px;
-      }
-      .button-link:hover {
-        background-color: white;
-        color: #808080;
-        border: 2px solid #808080;
-      }
-      #header {
-        display: flex;
-        align-items: center;
-      }
-      #header > div {
-        flex-grow: 1;
-        text-align: center;
-      }
-      footer {
-        text-align: center;
-        padding: 10px;
-        background-color: #403f3f;
-        color: white;
-        font-size: 0.9em;
-        position: relative;
-        bottom: 0;
-        width: 100%;
-      }
+            position: absolute;
+            top: 20px;
+            left: 20px;
+            background-color: #808080;
+            border: none;
+            color: white;
+            padding: 10px 20px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 14px;
+            cursor: pointer;
+            border-radius: 5px;
+            transition-duration: 0.4s;
+            margin-right: 20px;
+        }
+        .button-link:hover {
+            background-color: white;
+            color: #808080;
+            border: 2px solid #808080;
+        }
+        footer {
+            text-align: center;
+            padding: 10px;
+            background-color: #403f3f;
+            color: white;
+            font-size: 0.9em;
+            width: 100%;
+        }
         .contact-form {
             width: 100%;
             max-width: 500px;
