--- a/contact.html
+++ b/contact.html
@@ -91,22 +91,23 @@
             background-color: #0056b3;
         }
     </style>
+    <div class="light"></div>
 </head>
 <body>
     <a href="https://darconex.github.io/" class="button-link">Menu</a>
     <div class="content">
         <form class="contact-form" action="/envoyer-message" method="post">
             <h2>Contactez-nous</h2>
-            <label for="nom">Nom :</label>
+            <label for="nom">Nom * :</label>
             <input type="text" id="nom" name="nom" required>
 
-            <label for="email">Email :</label>
+            <label for="email">Email * :</label>
             <input type="email" id="email" name="email" required>
 
-            <label for="sujet">Sujet :</label>
+            <label for="sujet">Sujet * :</label>
             <input type="text" id="sujet" name="sujet" required>
 
-            <label for="message">Message :</label>
+            <label for="message">Message * :</label>
             <textarea id="message" name="message" rows="5" required></textarea>
 
             <button type="submit">Envoyer</button>
