--- a/cv.html
+++ b/cv.html
@@ -63,113 +63,111 @@
             </ul>
         </section>
         <section class="section experience">
-<h2>Sea Tpi</h2>
-<p>7 ans 3 mois</p>
-<h3>Analyste SOC / Cybersécurité CDI</h3>
-<p>De avr. 2022 à aujourd’hui · 2 ans 6 mois</p>
-<p>Paris · HybrideParis · Hybride</p>
-<p>● SOC Analyste N2<p>
-<p>➔ Traitement des alertes de sécurité</p>
-<p>➔ Analyse, qualification et réponse aux incidents de sécurité</p>
-<p>➔ Technologies éditeurs (SIEM, EPP, EDR, Protection de la messagerie et scanner de vulnérabilités)</p>
-<p>➔ Investigation sur Open Source Intelligence (OSINT)</p>
-<p>➔ Cyber Threat Intelligence / Threat Hunting</p>
-<p>➔ Gestion de crise</p>
-<p>➔ Astreinte pour le N1</p>
-<p>● Projet et Intégration</p>
-<p>➔Création de Template, procédure et documents techniques</p>
-<p>➔Mise en place d'un journal sur l'intranet (CyberVeille, Alerte CVE, Cyber Actu, Patch Tuesday)</p>
-<p>● Technologie</p>
-<p>Solution de sécurité suivante :</p>
-<p>➔ Tehtris, Sophos, Azure AD, Microsoft Defender, Vade Cloud, Graylog, TheHive, Elastic, Withsecure, LogPoint, CrowdStrike, Q-Radar, HarfangLab, Riot, Cyberwatch</p>
-<p>● Projet et Intégration</p>
-<p></p>➔Création de Template, procédure et documents techniques</p>
-<p>➔ Mise en place d'un journal sur l'intranet (CyberVeille, Alerte CVE, Cyber Actu, Patch Tuesday)</p>
-<p></p>● Technologie Solution de sécurité suivante :</p>
-<p>➔ Tehtris, Sophos, Azure AD, Microsoft Defender, Vade Cloud, Graylog, TheHive, Elastic, Withsecure, LogPoint, CrowdStrike, Q-Radar, HarfangLab, Riot, Cyberwatch<br />
-<p>Technicien N2 - AVIVA France</p>
-<p>Du août 2021 au mars 2022 · 8 mois</p>
-<p>Bois-Colombes, Île-de-France, France · Sur site</p>
-<p>➔ Création de procédures</p>
-<p>➔ Déplacement multi-sites</p>
-<p>➔ Gestion demandes et incidents</p>
-<p>➔ Rapport Backlog et SLA</p>
-<p>➔ Création de procédures</p>
-<p>➔ Déplacement multi-sites</p>
-<p>➔ Gestion demandes et incidents</p>
-<p>➔ Rapport Backlog et SLA</p>
-<p>Technicien de Proximité N2, utilisateur et VIP - Groupe BPCE-IT CDI</p>
-<p>Du juil. 2017 au août 2021 · 4 ans 2 mois</p>
-<p>Région de Paris, France · Sur site</p>
-<p>➔ Préparation des postes</p>
-<p>➔ Gestion demandes et incidents</p>
-<p>➔ Intervention réseau</p>
-<p>➔ Gestion d’inventaire</p>
-<p>➔ Gestion d’équipe (intérimaire) sur site et à distance</p>
-<p>➔ Intervention sur multi-sites</p>
-<p>➔ Accompagnement des nouveaux arrivants</p>
-<p>➔ Déploiement de la solution One-Q</p>
-<p>➔ BAR-IT</p>
-<p>Projet « OPEN » - Réaménagement du site en Open Space (Durée du projet 1 an)</p>
-<p>➔ Mission aménagement des bureaux en Open Space</p>
-<p>➔ Gestion et accompagnement à l’utilisation du nouveau matériel</p>
-<p>➔ Préparation et configuration de 150 postes</p>
-<p>➔ Analyse de chaque port pour mettre dans le bon vlan (IMP, Poste, Wifi)</p>
-<p>➔ Migration de W7 à W10</p>
-<p>➔ Préparation des postes</p>
-<p>➔ Gestion demandes et incidents</p> 
-<p>➔ Intervention réseau</p>
-<p>➔ Gestion d’inventaire</p>
-<p>➔ Gestion d’équipe (intérimaire) sur site et à distance</p>
-<p>➔ Intervention sur multi-sites</p>
-<p>➔ Accompagnement des nouveaux arrivants</p>
-<p>➔ Déploiement de la solution One-Q</p>
-<p>➔ BAR-IT Projet « OPEN » - Réaménagement du site en Open Space (Durée du projet 1 an)</p>
-<p>➔ Mission aménagement des bureaux en Open Space</p>
-<p>➔ Gestion et accompagnement à l’utilisation du nouveau matériel</p> 
-<p>➔ Préparation et configuration de 150 postes</p>
-<p>➔ Analyse de chaque port pour mettre dans le bon vlan (IMP, Poste, Wifi)</p>
-<p>➔ Migration de W7 à W10</p>
-<p>Technicien de Proximité pour SysmexTechnicien de Proximité pour Sysmex<p>
-<p>Temps partiel</p>
-<p>Du févr. 2019 au juin 2019 · 5 mois</p>
-<p>VILLEPINTE · Sur site</p>
-<p>➔ Déploiement du parc informatique</p>
-<p>➔ Création de procédures sur des outils propre à l'entreprise</p>
-<p>➔ Gestion de l'AD</p>
-<p>SNCF · Contrat en alternance</p>
-<p>Technicien de Proximité</p>
-<p>Du sept. 2016 au juin 2017 · 10 mois</p>
-<p>Villeneuve triage · Sur site</p>
-<p>➔ Déploiement des PC Rame</p>
-<p>➔ Masterisation des postes informatiques</p>
-<p>➔ Prise en main à distance « Dameware »</p>
-<p>➔ Utilisation de logiciel bureautique</p>
-<p>➔ Hotline</p>
-<p>➔ Brassage de bais réseaux</p>
-<hr>
-<h2>Banque de France · Contrat en alternance</h2>
-<h2>SPAD ( Service Pré-études Approvisionnement Déploiements )</h2>
-<p>Du sept. 2015 au août 2016 · 1 an</p>
-<p>Région de Paris, France · Sur site</p>
-<p>➔ Déploiement des iPhones sur le terminal Air Watch</p>
-<p>➔ Dépannage des iPhones</p>
-<p>➔ Utilisation de Gestion du parc informatique ( REPAR )</p>
-<hr>
-<h2>Exide Technologies and GNB Industrial Power (div. of Exide Technologies)</h2>
-<h3>Technicien de Proximité</h3>
-<p>Du févr. 2015 au avr. 2015 · 3 mois</p>
-<p>Gennevillier</p>
-<p>➔ Prise du contrôle à distance avec un outil TeamViewer</p>
-<p>➔ Réparation du fichier de démarrage ( GRUB et MBR )</p>
-<p>➔ Protection réseau et informatique avec un outil agent McAfee</p>
-<p>➔ Mise en place d'un lecteur réseau</p>
-<p>➔ Mise en place d'un pc et d'imprimante dans un réseau</p>
-<p>➔ Monter et démonter les ordinateurs portables et fixes</p>
-<p>➔ Assistance au logiciel de bureautique</p>
-<p>➔ Ghoster les ordinateurs</p>
-<p>➔ Diagnostiquer une panne d’ordinateur</p>
-<p>➔ Utilisation d'hyper-v : mise en place des quotas pour limiter un espace disque, Création de plusieurs partitions, Gestion des autorisations des fichiers, Déploiement d’un master</p>
+            <h2>Sea Tpi</h2>
+            <p>7 ans 3 mois</p>
+            <h3>Analyste SOC / Cybersécurité CDI</h3>
+            <p>De avr. 2022 à aujourd’hui · 2 ans 6 mois</p>
+            <p>Paris · HybrideParis · Hybride</p>
+            <p>● SOC Analyste N2<p>
+            <p>➔ Traitement des alertes de sécurité</p>
+            <p>➔ Analyse, qualification et réponse aux incidents de sécurité</p>
+            <p>➔ Technologies éditeurs (SIEM, EPP, EDR, Protection de la messagerie et scanner de vulnérabilités)</p>
+            <p>➔ Investigation sur Open Source Intelligence (OSINT)</p>
+            <p>➔ Cyber Threat Intelligence / Threat Hunting</p>
+            <p>➔ Gestion de crise</p>
+            <p>➔ Astreinte pour le N1</p>
+            <p>● Projet et Intégration</p>
+            <p>➔Création de Template, procédure et documents techniques</p>
+            <p>➔Mise en place d'un journal sur l'intranet (CyberVeille, Alerte CVE, Cyber Actu, Patch Tuesday)</p>
+            <p>● Technologie</p>
+            <p>Solution de sécurité suivante :</p>
+            <p>➔ Tehtris, Sophos, Azure AD, Microsoft Defender, Vade Cloud, Graylog, TheHive, Elastic, Withsecure, LogPoint, CrowdStrike, Q-Radar, HarfangLab, Riot, Cyberwatch</p>
+            <p>● Projet et Intégration</p>
+            <p></p>➔Création de Template, procédure et documents techniques</p>
+            <p>➔ Mise en place d'un journal sur l'intranet (CyberVeille, Alerte CVE, Cyber Actu, Patch Tuesday)</p>
+            <p></p>● Technologie Solution de sécurité suivante :</p>
+            <p>➔ Tehtris, Sophos, Azure AD, Microsoft Defender, Vade Cloud, Graylog, TheHive, Elastic, Withsecure, LogPoint, CrowdStrike, Q-Radar, HarfangLab, Riot, Cyberwatch<br />
+            <p>Technicien N2 - AVIVA France</p>
+            <p>Du août 2021 au mars 2022 · 8 mois</p>
+            <p>Bois-Colombes, Île-de-France, France · Sur site</p>
+            <p>➔ Création de procédures</p>
+            <p>➔ Déplacement multi-sites</p>
+            <p>➔ Gestion demandes et incidents</p>
+            <p>➔ Rapport Backlog et SLA</p>
+            <p>➔ Création de procédures</p>
+            <p>➔ Déplacement multi-sites</p>
+            <p>➔ Gestion demandes et incidents</p>
+            <p>➔ Rapport Backlog et SLA</p>
+            <p>Technicien de Proximité N2, utilisateur et VIP - Groupe BPCE-IT CDI</p>
+            <p>Du juil. 2017 au août 2021 · 4 ans 2 mois</p>
+            <p>Région de Paris, France · Sur site</p>
+            <p>➔ Préparation des postes</p>
+            <p>➔ Gestion demandes et incidents</p>
+            <p>➔ Intervention réseau</p>
+            <p>➔ Gestion d’inventaire</p>
+            <p>➔ Gestion d’équipe (intérimaire) sur site et à distance</p>
+            <p>➔ Intervention sur multi-sites</p>
+            <p>➔ Accompagnement des nouveaux arrivants</p>
+            <p>➔ Déploiement de la solution One-Q</p>
+            <p>➔ BAR-IT</p>
+            <p>Projet « OPEN » - Réaménagement du site en Open Space (Durée du projet 1 an)</p>
+            <p>➔ Mission aménagement des bureaux en Open Space</p>
+            <p>➔ Gestion et accompagnement à l’utilisation du nouveau matériel</p>
+            <p>➔ Préparation et configuration de 150 postes</p>
+            <p>➔ Analyse de chaque port pour mettre dans le bon vlan (IMP, Poste, Wifi)</p>
+            <p>➔ Migration de W7 à W10</p>
+            <p>➔ Préparation des postes</p>
+            <p>➔ Gestion demandes et incidents</p> 
+            <p>➔ Intervention réseau</p>
+            <p>➔ Gestion d’inventaire</p>
+            <p>➔ Gestion d’équipe (intérimaire) sur site et à distance</p>
+            <p>➔ Intervention sur multi-sites</p>
+            <p>➔ Accompagnement des nouveaux arrivants</p>
+            <p>➔ Déploiement de la solution One-Q</p>
+            <p>➔ BAR-IT Projet « OPEN » - Réaménagement du site en Open Space (Durée du projet 1 an)</p>
+            <p>➔ Mission aménagement des bureaux en Open Space</p>
+            <p>➔ Gestion et accompagnement à l’utilisation du nouveau matériel</p> 
+            <p>➔ Préparation et configuration de 150 postes</p>
+            <p>➔ Analyse de chaque port pour mettre dans le bon vlan (IMP, Poste, Wifi)</p>
+            <p>➔ Migration de W7 à W10</p>
+            <p>Technicien de Proximité pour SysmexTechnicien de Proximité pour Sysmex<p>
+            <p>Temps partiel</p>
+            <p>Du févr. 2019 au juin 2019 · 5 mois</p>
+            <p>VILLEPINTE · Sur site</p>
+            <p>➔ Déploiement du parc informatique</p>
+            <p>➔ Création de procédures sur des outils propre à l'entreprise</p>
+            <p>➔ Gestion de l'AD</p>
+            <p>SNCF · Contrat en alternance</p>
+            <p>Technicien de Proximité</p>
+            <p>Du sept. 2016 au juin 2017 · 10 mois</p>
+            <p>Villeneuve triage · Sur site</p>
+            <p>➔ Déploiement des PC Rame</p>
+            <p>➔ Masterisation des postes informatiques</p>
+            <p>➔ Prise en main à distance « Dameware »</p>
+            <p>➔ Utilisation de logiciel bureautique</p>
+            <p>➔ Hotline</p>
+            <p>➔ Brassage de bais réseaux</p><hr>
+            <h2>Banque de France · Contrat en alternance</h2>
+            <h2>SPAD ( Service Pré-études Approvisionnement Déploiements )</h2>
+            <p>Du sept. 2015 au août 2016 · 1 an</p>
+            <p>Région de Paris, France · Sur site</p>
+            <p>➔ Déploiement des iPhones sur le terminal Air Watch</p>
+            <p>➔ Dépannage des iPhones</p>
+            <p>➔ Utilisation de Gestion du parc informatique ( REPAR )</p><hr>
+            <h2>Exide Technologies and GNB Industrial Power (div. of Exide Technologies)</h2>
+            <h3>Technicien de Proximité</h3>
+            <p>Du févr. 2015 au avr. 2015 · 3 mois</p>
+            <p>Gennevillier</p>
+            <p>➔ Prise du contrôle à distance avec un outil TeamViewer</p>
+            <p>➔ Réparation du fichier de démarrage ( GRUB et MBR )</p>
+            <p>➔ Protection réseau et informatique avec un outil agent McAfee</p>
+            <p>➔ Mise en place d'un lecteur réseau</p>
+            <p>➔ Mise en place d'un pc et d'imprimante dans un réseau</p>
+            <p>➔ Monter et démonter les ordinateurs portables et fixes</p>
+            <p>➔ Assistance au logiciel de bureautique</p>
+            <p>➔ Ghoster les ordinateurs</p>
+            <p>➔ Diagnostiquer une panne d’ordinateur</p>
+            <p>➔ Utilisation d'hyper-v : mise en place des quotas pour limiter un espace disque, Création de plusieurs partitions, Gestion des autorisations des fichiers, Déploiement d’un master</p>
         </section>
         <section class="section skills">
             <h2>Autodidacte</h2>
@@ -181,9 +179,9 @@
             <h2>Formation</h2>
             <div class="education-item">
                 <h3>Diplôme - Établissement</h3>
-                <p>Technicien Supérieur en Maintenance Informatique et Réseau-BAC+2</p>
+                <p>➔ Technicien Supérieur en Maintenance Informatique et Réseau-BAC+2</p>
                 <p>De 2015 à 2017 | Aston Arcueil-Cachan.</p>
-                <p>Technicien Maintenance micro-Informatique et Réseau-BAC</p>
+                <p>➔ Technicien Maintenance micro-Informatique et Réseau-BAC</p>
                 <p>De 2015 à 2016 | Aston Bagneux.</p>
             </div>
         </section>
