--- a/cv.html
+++ b/cv.html
@@ -60,6 +60,7 @@
                 <li>Email : Secret</li>
                 <li>Téléphone : Secret</li>
                 <li>Adresse : Ile de France</li>
+                <img src="img/logo_link.png" alt="Logo" class="logo" href="https://www.linkedin.com/in/darconex/" style="width: 50px; height: 50px;">
             </ul>
         </section>
         <section class="section experience">
