--- a/cv.html
+++ b/cv.html
@@ -60,9 +60,7 @@
                 <li>Email : Secret</li>
                 <li>Téléphone : Secret</li>
                 <li>Adresse : Ile de France</li>
-                <a href="https://www.linkedin.com/in/darconex/">
-                    <img src="img/logo_link.png" alt="Logo" class="logo" style="width: 50px; height: 50px;">
-                </a>
+                <a href="https://www.linkedin.com/in/darconex/"><img src="img/logo_link.png" alt="Logo" class="logo" style="width: 50px; height: 50px;"></a>
             </ul>
         </section>
         <section class="section experience">
