--- a/cv.html
+++ b/cv.html
@@ -137,7 +137,7 @@
             <p>VILLEPINTE · Sur site</p>
             <p>➔ Déploiement du parc informatique</p>
             <p>➔ Création de procédures sur des outils propre à l'entreprise</p>
-            <p>➔ Gestion de l'AD</p>
+            <p>➔ Gestion de l'AD</p><hr>
             <p>SNCF · Contrat en alternance</p>
             <p>Technicien de Proximité</p>
             <p>Du sept. 2016 au juin 2017 · 10 mois</p>
