--- a/cv.html
+++ b/cv.html
@@ -61,6 +61,7 @@
                 <li>Téléphone : Secret</li>
                 <li>Adresse : Ile de France</li>
                 <a href="https://www.linkedin.com/in/darconex/" style="text-decoration: none;"><img src="img/logo_link.png" alt="Logo" class="logo" style="width: 50px; height: 50px;"></a>
+                <a href="https://www.root-me.org/darconex" style="text-decoration: none;"><img src="img/rootme.png" alt="Logo" class="logo" style="width: 50px; height: 50px;"></a>
             </ul>
         </section>
         <section class="section experience">
