--- a/cv.html
+++ b/cv.html
@@ -60,8 +60,8 @@
                 <li>Email : Secret</li>
                 <li>Téléphone : Secret</li>
                 <li>Adresse : Ile de France</li>
-                <a href="https://www.linkedin.com/in/darconex/" style="text-decoration: none;"><img src="img/logo_link.png" alt="Logo" class="logo" style="width: 50px; height: 50px;"></a>
-                <a href="https://www.root-me.org/darconex" style="text-decoration: none;"><img src="img/rootme.png" alt="Logo" class="logo" style="width: 50px; height: 50px;"></a>
+                <a href="https://www.linkedin.com/in/darconex/" style="text-decoration: none; border: none;"><img src="img/logo_link.png" alt="Logo" class="logo" style="width: 50px; height: 50px; border: none;"></a>
+                <a href="https://www.root-me.org/darconex" style="text-decoration: none; border: none;"><img src="img/rootme.png" alt="Logo" class="logo" style="width: 50px; height: 50px; border: none;"></a>
             </ul>
         </section>
         <section class="section experience">
