--- a/certificat.html
+++ b/certificat.html
@@ -79,7 +79,14 @@
         .button-link:hover {
             background-color: #357ab7;
         }
-
+        footer {
+            text-align: center;
+            padding: 10px;
+            background-color: #4a90e2;
+            color: #fff;
+            width: 100%;
+            margin-top: 20px;
+        }
     </style>
 </head>
 <body>
@@ -296,5 +303,8 @@
             </div>
         </div>
     </div>
+    <footer>
+        &copy; 2024 Darconex. Tous droits réservés.
+    </footer>
 </body>
 </html>
