--- a/cv.html
+++ b/cv.html
@@ -56,14 +56,19 @@
     <main>
         <section class="section personal-info">
             <h2>Informations Personnelles</h2>
-            <ul>
-                <li>Email : Secret</li>
-                <li>Téléphone : Secret</li>
-                <li>Adresse : Ile de France</li>
-                <a href="https://www.linkedin.com/in/darconex/" style="text-decoration: none; border: none;"><img src="img/logo_link.png" alt="Logo" class="logo" style="width: 50px; height: 50px; border: none;"></a>
-                <a href="https://www.root-me.org/darconex" style="text-decoration: none; border: none;"><img src="img/rootme.png" alt="Logo" class="logo" style="width: 50px; height: 50px; border: none;"></a>
-                <img src="https://tryhackme-badges.s3.amazonaws.com/Darconex.png" alt="Votre badge d'image" />
-            </ul>
+        <ul>
+            <li>Email : Secret</li>
+            <li>Téléphone : Secret</li>
+            <li>Adresse : Ile de France</li>
+            <a href="https://www.linkedin.com/in/darconex/" style="text-decoration: none; border: none;">
+            <img src="img/logo_link.png" alt="Logo" class="logo" style="width: 50px; height: 50px; border: none;">
+            </a>
+            <a href="https://www.root-me.org/darconex" style="text-decoration: none; border: none;">
+            <img src="img/rootme.png" alt="Logo" class="logo" style="width: 50px; height: 50px; border: none;">
+            </a>
+            <br>
+        <img src="https://tryhackme-badges.s3.amazonaws.com/Darconex.png" alt="Votre badge d'image" />
+        </ul>
         </section>
         <section class="section experience">
             <h2>Sea Tpi</h2>
