--- a/contact.html
+++ b/contact.html
@@ -90,19 +90,25 @@
         .contact-form button:hover {
             background-color: #0056b3;
         }
+        .success-message {
+            display: none;
+            text-align: center;
+            margin-top: 20px;
+            color: green;
+            font-weight: bold;
+        }
     </style>
-    <div class="light"></div>
 </head>
 <body>
     <a href="https://darconex.github.io/" class="button-link">Menu</a>
     <div class="content">
-        <form class="contact-form" action="/envoyer-message" method="post">
+        <form class="contact-form" id="contactForm" action="send-mail.php" method="post" onsubmit="return validateForm()">
             <h2>Contactez-nous</h2>
             <label for="nom">Nom * :</label>
             <input type="text" id="nom" name="nom" required>
 
             <label for="email">Email * :</label>
-            <input type="email" id="email" name="email" required>
+            <input type="email" id="email" name="email" required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" title="Veuillez entrer un email valide.">
 
             <label for="sujet">Sujet * :</label>
             <input type="text" id="sujet" name="sujet" required>
@@ -111,10 +117,28 @@
             <textarea id="message" name="message" rows="5" required></textarea>
 
             <button type="submit">Envoyer</button>
+            <p class="success-message" id="successMessage">Votre message a été envoyé avec succès !</p>
         </form>
     </div>
     <footer>
         &copy; 2024 Darconex. Tous droits réservés.
     </footer>
+    <script>
+        function validateForm() {
+            const form = document.getElementById('contactForm');
+            const successMessage = document.getElementById('successMessage');
+
+            // Simulate successful submission
+            if (form.checkValidity()) {
+                successMessage.style.display = 'block';
+                setTimeout(() => {
+                    successMessage.style.display = 'none';
+                }, 5000);
+                form.reset();
+                return false; // Prevent actual form submission
+            }
+            return true;
+        }
+    </script>
 </body>
 </html>
