--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         <li class="sub-item"><a href="https://darconex.github.io/groups/team" class="sub-link">Team</a></li>
                     </ul>
                 </li>
-                <li class="nav-item"><a href="https://darconex.com" class="nav-link">Pro</a></li>
+                <li class="nav-item"><a href="travaux.html" class="nav-link">Pro</a></li>
                 <li class="nav-item">
                     <span class="nav-link nav-link-disabled">À Propos</span>
                     <ul class="sub-menu">
